# loggem

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  RELEASE_GUIDE.md  SECURITY.md  TESTING.md  config.example.yaml  install.sh  pyproject.toml  quickstart.py  release_checklist.sh
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml
docs/: COVERAGE_REPORT.md  DOCUMENTATION_INDEX.md
examples/: README.md  alerting_example.py  basic_usage.py  custom_parser.py  model_showcase.py  model_switching.py  performance_example.py  sample_windows_events.xml  streaming_example.py  windows_event_example.py
src/loggem/: __init__.py  cli.py
src/loggem/alerting/: __init__.py
src/loggem/analyzer/: __init__.py  log_analyzer.py  pattern_detector.py
src/loggem/core/: __init__.py  config.py  logging.py  models.py
src/loggem/detector/: __init__.py  anomaly_detector.py  llm_provider.py  model_manager.py
src/loggem/parsers/: __init__.py  apache.py  auth.py  base.py  docker.py  factory.py  haproxy.py  json_parser.py  kubernetes.py  mysql.py  nginx.py  postgresql.py  redis.py  syslog.py  windows_event.py
src/loggem/performance/: __init__.py
src/loggem/reporting/: __init__.py
src/loggem/streaming/: __init__.py
tests/: __init__.py  test_alerting.py  test_analyzers.py  test_config.py  test_llm_provider.py  test_model_manager.py  test_models.py  test_parsers.py  test_performance.py  test_streaming.py  test_windows_event.py
